--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
           <div class="card h-100 border-0">
-            <img src="/assets/images/1.png" class="card-img-top" alt="..." />
+            <img src="./assets/images/1.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <small>Chai</small>
 
@@ -155,7 +155,7 @@
         </div>
         <div class="col">
           <div class="card h-100 border-0">
-            <img src="/assets/images/2.png" class="card-img-top" alt="..." />
+            <img src="./assets/images/2.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <small>Chai</small>
 
@@ -168,7 +168,7 @@
         </div>
         <div class="col">
           <div class="card h-100 border-0">
-            <img src="/assets/images/3.png" class="card-img-top" alt="..." />
+            <img src="./assets/images/3.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <small>Chai</small>
 
@@ -181,7 +181,7 @@
         </div>
         <div class="col">
           <div class="card h-100 border-0">
-            <img src="/assets/images/4.png" class="card-img-top" alt="..." />
+            <img src="./assets/images/4.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <small>Chai</small>
               <h5 class="card-title">Nyantuy Chair</h5>
@@ -201,7 +201,7 @@
 
         <div class="row justify-content-center align-items-center g-2">
           <div class="col-md-6">
-            <div><img src="/assets/images/sofa.png" alt="" class="img-fluid" /></div>
+            <div><img src="./assets/images/sofa.png" alt="" class="img-fluid" /></div>
           </div>
           <div class="col-md-6 info">
             <h6>Materials</h6>
@@ -229,7 +229,7 @@
             <button class="btn info-link">More Info</button>
           </div>
                     <div class="col-md-6">
-            <div><img src="/assets/images/family-table.png" alt="" class="img-fluid" /></div>
+            <div><img src="./assets/images/family-table.png" alt="" class="img-fluid" /></div>
           </div>
         </div>
 
